modules/applicationLoadBalancer/sg.tf
resource "aws_security_group" "alb_sg" {
  name        = format("%s-ALB_SG", var.tags["environment"])
  vpc_id      =  data.aws_vpc.my_vpc.id 
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Ingress rule for HTTPS (port 443)
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Egress rule for all outbound traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(var.tags, {
    Name = format("%s-ALB_SG", var.tags["environment"])
  }
  )
}
